--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
   },
   "homepage": "https://github.com/erosnoxx/Email-Dispatcher-System#readme",
   "dependencies": {
+    "@prisma/client": "^6.3.1",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "fastify": "^5.2.1",
-    "fastify-plugin": "^5.0.1"
+    "fastify-plugin": "^5.0.1",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^22.13.4",
+    "prisma": "^6.3.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
   }
